rabbitmq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service
spec:
  selector:
    app: rabbit
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
